--- a/echoserver/BUILD
+++ b/echoserver/BUILD
@@ -1,5 +1,6 @@
 load("@rules_proto//proto:defs.bzl", "proto_library")
 load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
+load("@com_github_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
 
 proto_library(
     name = "echo_service_proto",
@@ -11,11 +12,24 @@ cc_proto_library(
     deps = [":echo_service_proto"],
 )
 
+java_proto_library(
+  name = "echo_service_java_proto",
+  deps = [":echo_service_proto"],
+)
+
 cc_grpc_library(
     name = "echo_service_cc_grpc",
     srcs = [":echo_service_proto"],
     grpc_only = True,
     deps = [":echo_service_cc_proto"],
+    visibility = ["//visibility:public"],
+)
+
+java_grpc_library(
+  name = "echo_service_java_grpc",
+  srcs = [":echo_service_proto"],
+  deps = [":echo_service_java_proto"],
+  visibility = ["//visibility:public"],
 )
 
 cc_library(
